--- a/app/views/objectives/stage6.html.erb
+++ b/app/views/objectives/stage6.html.erb
@@ -58,9 +58,9 @@
                     <thead>
                       <tr>
                         <th></th>
-                        <th>Fecha</th>
-                        <th>Actor(es)</th>
-                        <th class="text-right">Acciones</th>
+                        <th><%= t('.date') %></th>
+                        <th><%= t('.actors') %></th>
+                        <th class="text-right"><%= t('.actions') %></th>
                       </tr>
                     </thead>
                     <tbody ng-repeat="m in ask.messages track by $index">
