--- a/app/views/objectives/_msj_modal.html.erb
+++ b/app/views/objectives/_msj_modal.html.erb
@@ -1,12 +1,12 @@
 <script type="text/ng-template" id="add-msj.html">
   <div class="modal-header">
-    <h3 class="modal-title"><%= t('.menssage') %></h3>
+    <h3 class="modal-title"><%= t('.message') %></h3>
   </div>
   <div class="modal-body">
     <form>
       <div class="form-group">
-        <label for="message"><%= t('.menssage') %></label>
-        <textarea name="message" class="form-control" rows="3" ng-model="current_msj.description" placeholder="<%= t('.menssage_placeholder') %>"></textarea>
+        <label for="message"><%= t('.message') %></label>
+        <textarea name="message" class="form-control" rows="3" ng-model="current_msj.description" placeholder="<%= t('.message_placeholder') %>"></textarea>
       </div>
       <div class="form-group">
         <label for="actors"><%= t('.actors') %></label>
