--- a/app/views/objectives/stage4.html.erb
+++ b/app/views/objectives/stage4.html.erb
@@ -129,11 +129,11 @@
                                 {{item.description}}
                               </td>
                               <td class="text-right">
-                                <a href="#" title="Editar" ng-click="add_edit_outcome(item)"><i class="fa fa-pencil-square-o"></i></a>
+                                <a href="#" title="<%= t('.edit') %>" ng-click="add_edit_outcome(item)"><i class="fa fa-pencil-square-o"></i></a>
                                 
-                                <a href="#" title="Indicators" ng-click="add_edit_indicator(item)"><i class="fa fa-line-chart"></i></a>
+                                <a href="#" title="<%= t('.indicators') %>" ng-click="add_edit_indicator(item)"><i class="fa fa-line-chart"></i></a>
                                 
-                                <a href="#" title="Eliminar" ng-click="delete_outcome(item)"><i class="fa fa-trash"></i></a>
+                                <a href="#" title="<%= t('.delete') %>" ng-click="delete_outcome(item)"><i class="fa fa-trash"></i></a>
                               </td>
                             </tr>
                           </table>
