--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -205,6 +205,7 @@
         <!--</div>-->
 
     </div>
+    </div>
     <div role="tabpanel" class="tab-pane" id="dashboard">
       <div class="project-hero02">
         <h2><%= @project.title %></h2>
