--- a/app/views/objectives/_msj_modal.html.erb
+++ b/app/views/objectives/_msj_modal.html.erb
@@ -13,6 +13,10 @@
         <select name="actor_id" ng-options="actor.id as actor.name for actor in actors" ng-model="current_msj.actor_id" class="form-control"></select>
       </div>
       <div class="form-group">
+        <label for="activities"><%= t('.activities') %></label>
+        <select name="activity_id" ng-options="activity.id as activity.description for activity in activities" ng-model="current_msj.activity_id" class="form-control"></select>
+      </div>
+      <div class="form-group">
         <label for="executed"><%= t('.executed') %></label>
           <input name="executed" type="checkbox" id="executed" ng-model="current_msj.executed">
       </div>
