--- a/app/views/contact_mailer/new_message.html.erb
+++ b/app/views/contact_mailer/new_message.html.erb
@@ -1,3 +1,3 @@
-<%= @message.name %> (<%= @message.email %>) 
+<%= @message.name %> (<%= @message.email %>) <br>
 wrote:<br>
 <%= @message.message %>
