--- a/app/views/projects/_overview.html.erb
+++ b/app/views/projects/_overview.html.erb
@@ -112,11 +112,11 @@
                   <p></p>
                 <% else %>
                   <div class="separator"></div>
-                  <h4><%= t('.interim_outcomes')%></h4>
+                  <h4><%= t('.outcomes')%></h4>
                     <% objective.outcomes.each_with_index do |outcome, i| %>
-                      <span class='blue'><%= t('.interim_outcome')%> <%= i+1 %>. </span><b><%= outcome.description.presence || t('.empty') %></b>
+                      <span class='blue'><%= t('.outcome')%> <%= i+1 %>. </span><b><%= outcome.description.presence || t('.empty') %></b>
                     <ul style="list-style-type:disc">
-                      <li><%= t('.type_interim_outcomes')%>: <%= outcome.outcome_type_id %></li>
+                      <li><%= t('.outcome_type')%>: <%= outcome.outcome_type_id %></li>
                       <!-- <li>Actor type: <%= outcome.actor_type_id %></li> -->
                       <div class="asks">
                         <% if outcome.asks.nil? %>
@@ -127,14 +127,22 @@
                           <h4><%= t('.asks') %></h4>
                           <% outcome.asks.each_with_index do |ask, i| %>
                             <span class='blue'><%= t('.ask') %> <%= i+1 %>. </span><b><%= ask.description.presence || t('.empty') %></b>
-                            <ul style="list-style-type:disc">
-                              <% ask.messages.each do |m| %>
-                              <li> <%= m.description %> </li>
-                                <p><%= t('.actors') %>: <%= m.actor ? m.actor.name : ""%></p>
-                                <p><%= t('.activity') %>: <%= m.activity ? m.activity.description : ""%></p>
-                                <p><%= t('.related_objectives') %>: <%= get_objective_related ask.objective_id %></p>
+                            <% if ask.messages.nil? %>
+                              <p></p>
+                            <% elsif ask.messages.count < 1 %>
+                              <p></p>
+                            <% else %>
+                              <h4><%= t('.messages') %></h4>
+                              <ul style="list-style-type:disc">
+                                <% ask.messages.each_with_index do |m,i| %>
+                                <li><span class='blue'><%= t('.message') %>  <%= i+1 %></span></li>
+                                  <p><%= m.description %></p> 
+                                  <p><%= t('.actors') %>: <%= m.actor ? m.actor.name : ""%></p>
+                                  <p><%= t('.activity') %>: <%= m.activity ? m.activity.description : ""%></p>
+                                  <p><%= t('.related_objectives') %>: <%= get_objective_related ask.objective_id %></p>
+                                <% end %>
+                              </ul>
                               <% end %>
-                            </ul>
                           <% end %>
                         <% end %>
                       </div>
