wip changes defined in 20160427 meeting

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -870,6 +870,14 @@ table.document td .btn {
     padding: 0;
 }
 
+.collapsible {
+  display: none;
+}
+.collapse_button {
+  float: right;
+  margin-top: -7px;
+}
+
 /* Colores Graficos*/
 
 .ct-perfect-fourth .ct-series-a .ct-line {
