--- a/app/views/devise/mailer/exist_user_share.html.erb
+++ b/app/views/devise/mailer/exist_user_share.html.erb
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Vizard Share</title>
+  <title><%= t('.title')%></title>
 </head>
 <body>
   <p><%= t('.exist_add_to_share') %></p>
