--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -151,6 +151,7 @@
                               <a href="#">(Coming soon) Define theory of change</a>
                             </td>
                           </tr> -->
+<!-- 
                           <tr title="<%= title_stage 3 %>">
                             <td class="text-center td-w-10p">
                               <i class="<%= icon_class objective.activities %>"></i>
@@ -158,7 +159,7 @@
                             <td>
                               <%= link_to objective_link_text(objective, :activities), stage5_project_objective_path(@project, objective), target: "_self" %>
                             </td>
-                          </tr>
+                          </tr>     -->
 <!--                           <tr title="You must complete the previous step">
                             <td class="text-center td-w-10p">
                               <i class="fa fa-lock"></i>
@@ -188,6 +189,14 @@
                             </td>
                             <td>
                               <%= link_to outcome_link_text(outcome, :asks), stage6_project_objective_outcome_path(@project, objective, outcome), target: "_self" %>
+                            </td>
+                          </tr>
+                          <tr title="<%= title_stage 3 %>">
+                            <td class="text-center td-w-10p">
+                              <i class="<%= icon_class objective.activities %>"></i>
+                            </td>
+                            <td>
+                              <%= link_to objective_link_text(objective, :activities_all), stage5_project_objective_path(@project, objective), target: "_self" %>
                             </td>
                           </tr>
                         </tbody>
