--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -106,7 +106,7 @@
                       <table class="table_goals">
                       <tr>
                         <td><%= t('.objective_cnt') %> <%= i + 1 %> / <%= objective.title %></td>
-                        <a href="" class="btn btn-info collapse_button" data-toggle="goal-<%= objective.id %>"><i class="fa fa-expand" aria-hidden="false"></i></a>
+                        <a href="" class="btn btn-warning pull-right collapse_button" data-toggle="goal-<%= objective.id %>"><i class="fa fa-expand" aria-hidden="false"></i></a>
                       </tr>
                       </table>
                     </div>
