--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -874,8 +874,8 @@ table.document td .btn {
   display: none;
 }
 .collapse_button {
-  float: right;
-  margin-top: -7px;
+  //float: right;
+  //margin-top: -7px;
 }
 
 /* Colores Graficos*/
