--- a/app/views/outcomes/stage6.html.erb
+++ b/app/views/outcomes/stage6.html.erb
@@ -60,8 +60,8 @@
                       <tr>
                         <th></th>
                         <th><%= t('.date') %></th>
-                        <th><%= t('.actors') %></th>
                         <th><%= t('.activities') %></th>
+                        <th><%= t('.actors') %></th>
                         <th class="text-right">Acciones</th>
                       </tr>
                     </thead>
@@ -70,12 +70,12 @@
                         <td width="5%">
                           <i class="fa" ng-class="{'fa-check': m.executed}" title="Entregado"></i>
                         </td>
-                        <td>{{m.created_at | date:'dd/MM/yyyy'}}</td>
-                        <td width="30%">
-                          {{m.actor.name}}
-                        </td>
+                        <td>{{m.activity.start_date | date:'dd/MM/yyyy'}} - {{m.activity.end_date | date:'dd/MM/yyyy'}}</td>
                         <td width="30%">
                           {{m.activity.description}}
+                        </td>
+                        <td width="30%">
+                          {{m.actor.name}}
                         </td>
                         <td class="text-right">
                           <i class="fa fa-pencil-square-o" ng-click="add_edit_msj(ask, m)" title="<%= t('.edit') %>"></i>
